INTYGFV-16764: Remove logic to redirect webcert launch to angularjs